# AIResume

./: .gitignore
backend/: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.full.yaml  docker-compose.yaml  proj_tree.txt  pyproject.toml  uv_and_pyproject_toml_complete_guide_ru.md
backend/.codex/: config.toml
backend/.github/workflows/: docker.yml  quality.yml
backend/alembic/: env.py
backend/alembic/versions/: 2a4721afcc53_auth_resume.py  7b1f3510c6a1_resume_versions.py
backend/app/: __init__.py  main.py  main_offline.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: app_logging.py  config.py  exceptions.py  lifespan.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  migrations.py  mixins.py  models.py  redis.py  session.py
backend/app/dto/: __init__.py  common.py  resumes.py  users.py  versions.py
backend/app/middleware/: logging.py  request_id.py  security.py
backend/app/models/: resume.py  resume_section.py  resume_version.py  user.py
backend/app/repositories/: __init__.py  resume.py  resume_version.py  user_repository.py
backend/app/repository/: __init__.py
backend/app/schemas/: resume.py  resume_import.py  section.py  template.py
backend/app/services/: auth_service.py  export.py  render.py  resume.py  resume_ai_parser.py  resume_document.py  resume_file.py  storage.py  versioning.py
backend/app/tasks/: worker.py
backend/docs/backlog/: 001-refresh-token-as-access-token.md  002-public-fake-auth-endpoint.md  003-resume-delete-not-committed.md  004-resume-section-creation-fails.md  005-healthcheck-reports-database-as-healthy.md  006-refresh-token-rotation-is-not-atomic.md  (+5 more)
backend/tests/: conftest.py
(+79 files in other folders)
