[project]
name = "ai-resume-builder"
version = "0.1.0"
description = "AI Resume + Cover Letter Builder backend"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "PVV" }
]

dependencies = [
    # FastAPI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    # Auth & security
    "pyjwt>=2.10.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    # Redis & tasks
    "redis>=5.2.0",
    "celery>=5.4.0",
    # Logging
    "structlog>=24.4.0",
    # HTTP
    "httpx>=0.28.0",
    # AI
    "openai>=1.58.0",
    # Templates
    "jinja2>=3.1.5",
    # PDF generation
    "weasyprint>=63.0",
    # Utilities
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "factory-boy>=3.3.1",

    # Lint & formatting
    "ruff>=0.8.4",

    # Typing
    "mypy>=1.14.0",

    # Type stubs
    "types-redis",
    "types-passlib",
]

[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    "alembic",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"

strict = true

exclude = [
    "alembic",
]

plugins = []

[tool.coverage.run]
source = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
